@@ -1,6 +1,7 @@
 Changes for APR 1.2.9
 
-
+  *) Fix deadlock in apr_file_gets() for a file opened with both the
+     APR_BUFFERED and APR_XTHREAD flags.  [Bojan Smojver]
 
 Changes for APR 1.2.8
 
